--- a/styles/list.module.scss
+++ b/styles/list.module.scss
@@ -1,3 +1,6 @@
+@use './variable' as *;
+@use 'sass:color' as colorfunc;
+
 .list {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
@@ -6,16 +9,16 @@
 }
 
 .item {
-  border: 1px solid #00000058;
-  box-shadow: 0px 6px 8px 0px #0000004f;
-}
+  border: 1px solid $grey;
+  box-shadow: 0px 6px 8px 0px $shdow-black;
 
-.item img {
-  display: block;
-  width: 100%;
-  height: auto;
-  min-height: 425px;
-  max-height: 425px;
+  img {
+    display: block;
+    width: 100%;
+    height: auto;
+    min-height: 425px;
+    max-height: 425px;
+  }
 }
 
 .textBox {
@@ -46,7 +49,7 @@
   display: block;
   margin-top: 4px;
   font-size: 14px;
-  color: dimgrey;
+  color: $grey;
   word-break: break-all;
 }
 
@@ -54,10 +57,11 @@
   display: inline-block;
   padding: 8px;
   font-size: 14px;
-  background-color: rgba(47, 79, 79, 0.087);
+  background-color: $light-grey;
   transition: all 0.3s ease-in-out;
-}
-.btn:hover {
-  background-color: rgba(47, 79, 79, 0.805);
-  color: #ffff;
+
+  &:hover {
+    background-color: $teal;
+    color: $white;
+  }
 }
