--- a/styles/_reset.scss
+++ b/styles/_reset.scss
@@ -1,6 +1,5 @@
-:root {
-  --light-grey: #eeeeee;
-}
+@use '@/styles/_variable_color' as *;
+
 html,
 body,
 div,
@@ -115,7 +114,7 @@ section {
   box-sizing: border-box;
 }
 body {
-  background-color: var(--light-grey);
+  background-color: $light-grey;
   font-family: 'Spoqa Han Sans', 'Sans-serif';
   font-weight: 400;
   color: inherit;
