<feat>: 코드 리팩토링 및 UI 스타일 변경

--- a/app/(home)/Home.module.scss
+++ b/app/(home)/Home.module.scss
@@ -1,7 +1,11 @@
 @use '@/styles/_variable_color' as *;
+@use '@/styles/_variable_font' as font;
 
 .list {
+  // display: grid;
+  // grid-template-columns: repeat(4, 1fr);
   display: flex;
   flex-wrap: wrap;
-  gap: 30px;
+  justify-content: center;
+  gap: 40px;
 }
