--- a/styles/_variable_color.scss
+++ b/styles/_variable_color.scss
@@ -1,6 +1,8 @@
 $black: #222831;
-$grey: #393e46;
+$grey: #62676f;
 $light-grey: #eeeeee;
 $teal: #00adb5;
+$pink: #ff7777;
 $white: #ffffff;
+$dark-white: #a7abb2;
 $shdow-black: rgba($black, 0.4);
