--- a/components/BookItem.module.scss
+++ b/components/BookItem.module.scss
@@ -1,66 +1,114 @@
 @use '@/styles/_variable_color' as *;
+@use '@/styles/_variable_font' as font;
 
 .list {
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  gap: 24px;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 60px;
   padding: 0 20px;
 }
 
 .item {
-  border: 1px solid $grey;
-  box-shadow: 0px 6px 8px 0px $shdow-black;
+  position: relative;
+  display: flex;
+  align-items: flex-end;
+  justify-content: flex-start;
+  gap: 24px;
+  max-width: 400px;
+  height: 260px;
+  padding: 24px;
+
+  &::after {
+    content: '';
+
+    position: absolute;
+    bottom: 0;
+    left: 0;
+
+    display: block;
+    width: 100%;
+    height: 200px;
+    background-color: $light-grey;
+    border-radius: 1em;
+  }
+}
+
+.imgBox {
+  position: relative;
+  display: flex;
+  align-items: stretch;
+  width: 150px;
+  height: 235px;
+  border-radius: 4px;
+  overflow: hidden;
 
   img {
+    z-index: 1;
+    position: relative;
     display: block;
     width: 100%;
     height: auto;
-    min-height: 425px;
-    max-height: 425px;
   }
 }
 
 .textBox {
+  z-index: 1;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   gap: 4px;
-  height: 140px;
-  padding: 8px;
+  width: 50%;
+  height: 100%;
+  padding-top: 60px;
+  font-family: font.$font-set;
 }
 
-.title {
-  font-size: 20px;
-  word-break: break-all;
+.bookName {
+  font-size: 16px;
+  font-weight: 700;
+  word-break: keep-all;
+
   /* 말줄임 */
   overflow: hidden;
   text-overflow: ellipsis;
   display: -webkit-box;
-  -webkit-line-clamp: 2;
-  line-clamp: 2;
+  -webkit-line-clamp: 4;
+  line-clamp: 4;
   -webkit-box-orient: vertical;
   word-wrap: break-word;
   line-height: 1.2em;
-  max-height: 2.4em;
+  max-height: 4.8em;
 }
 
-.author {
+.bookAuthor {
   display: block;
   margin-top: 4px;
-  font-size: 14px;
+  font-size: 12px;
+  font-weight: 500;
   color: $grey;
-  word-break: break-all;
+  word-break: keep-all;
 }
 
-.btn {
-  display: inline-block;
+.btnBuy {
+  display: flex;
+  align-items: center;
+  width: -moz-fit-content;
+  width: fit-content;
   padding: 8px;
-  font-size: 14px;
-  background-color: $light-grey;
+  // background-color: $black;
+  border-radius: 20em;
+  font-size: 12px;
+  color: $white;
+  background-color: $grey;
+  border: 1px solid $grey;
   transition: all 0.3s ease-in-out;
 
   &:hover {
-    background-color: $teal;
     color: $white;
+    background-color: $black;
+  }
+
+  span {
+    padding-left: 8px;
   }
 }
