--- a/components/CategoryItem.module.scss
+++ b/components/CategoryItem.module.scss
@@ -1,17 +1,82 @@
 @use '@/styles/_variable_color' as *;
+@use '@/styles/_variable_font' as font;
 
 .item {
-  border: 1px solid $grey;
-  box-shadow: 0px 6px 8px 0px $shdow-black;
-  transition: all 0.2s ease-in-out;
+  padding-bottom: 60px;
 
   &:hover {
-    box-shadow: 0px 2px 6px 0px $shdow-black;
-    transform: translateY(4px);
+    .bookImgBox {
+      overflow: initial;
+
+      &::before {
+        background-color: $light-grey;
+      }
+
+      img {
+        top: auto;
+        padding-bottom: 12px;
+        transform: translateY(-1px) rotate(3deg);
+      }
+    }
   }
 
   a {
-    display: inline-block;
-    padding: 12px;
+    position: relative;
+    display: flex;
+    flex-direction: column;
   }
+}
+
+.bookImgBox {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: end;
+  min-height: 180px;
+  max-height: 180px;
+  overflow: hidden;
+
+  &::before {
+    content: '';
+    display: block;
+    width: 230px;
+    height: 100px;
+    background-color: rgba($light-grey, 0.7);
+    border-radius: 1em;
+    transition: background 0.2s ease-in-out;
+  }
+
+  img {
+    position: absolute;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+    top: 0;
+    width: 134px;
+    min-height: 180px;
+    transition: all 0.2s ease-in-out;
+  }
+}
+
+.emptyImgBox {
+  width: 180px;
+  height: 240px;
+  background-color: $grey;
+  border-radius: 4px;
+}
+
+.bookName {
+  position: absolute;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
+  bottom: -50px;
+  width: calc(100% - 60px);
+  height: 40px;
+  line-height: 1.3em;
+  font-family: font.$font-set;
+  font-size: 14px;
+  text-align: center;
+  word-break: keep-all;
 }
