--- a/components/Navigation.module.scss
+++ b/components/Navigation.module.scss
@@ -1,42 +1,83 @@
 @use '@/styles/_variable_color' as *;
+@use '@/styles/_variable_font' as font;
+@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&family=Jost:ital,wght@0,100..900;1,100..900&family=Oswald&display=swap');
 
 .nav {
   z-index: 10;
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
-  background-color: $teal;
-  box-shadow: 0px 1px 4px 0px $shdow-black;
+  width: 240px;
+  height: 100lvh;
+  padding: 20px;
+  background-color: $light-grey;
+  font-family: font.$font-set;
+}
 
-  ul {
-    display: flex;
-    gap: 20px;
-    width: 100%;
-    padding: 20px;
-    max-width: 1280px;
-    margin: 0 auto;
+.title {
+  padding: 20px 0;
+  color: $black;
+  font-family: 'Jost', sans-serif;
+
+  & ~ span {
+    display: inline-block;
+    padding: 20px 0;
+    font-size: 10px;
+    font-weight: 700;
+    color: $dark-white;
+    text-transform: uppercase;
   }
+}
+
+.menu {
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+  width: 100%;
+  margin: 0 auto;
 
   li {
     list-style: none;
     transform: none;
     transition: all 0.3s ease-in-out;
-
-    &:hover {
-      a {
-        opacity: 0.5;
-      }
-    }
   }
 
   a {
-    color: $white;
+    display: flex;
+    align-items: center;
+    gap: 12px;
+
+    color: $dark-white;
     font-weight: 700;
     transition: opacity 0.3s ease-in-out;
 
+    .icon {
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+      width: 24px;
+      height: 24px;
+      padding: 4px;
+      color: rgba($black, 0.3);
+      background-color: rgba($dark-white, 0.5);
+      border-radius: 10px;
+      transition: all 0.3s ease-in-out;
+    }
+
+    &:hover {
+      .icon {
+        color: rgba($white, 0.7);
+        background-color: rgba($black, 0.3);
+      }
+    }
+
     &.active {
-      color: $white;
+      color: $black;
+
+      .icon {
+        color: $white;
+        background-color: $teal;
+      }
     }
   }
 }
