--- a/styles/common.scss
+++ b/styles/common.scss
@@ -1,36 +1,75 @@
 @use '@/styles/_variable_color' as *;
+@use '@/styles/_variable_font' as font;
+
+.wrap {
+  display: flex;
+}
+
+.contents {
+  margin-left: 240px;
+  background-color: $white;
+  min-width: calc(100lvw - 240px);
+  min-height: 100lvh;
+  padding: 40px;
+}
+
+.container {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
 .loading {
   padding: 20px 0;
-  font-family: 'Oswald', sans-serif;
+  font-family: font.$font-set;
   font-optical-sizing: auto;
   font-weight: 400;
   text-align: center;
   font-size: 30px;
 }
 
-.contents {
-  max-width: 1280px;
-  min-height: 100vh;
-  margin: 0 auto;
-  padding: 57px 0;
-  background-color: $white;
-}
-
-.container {
-  width: 100%;
-  padding: 20px;
-}
-
 .title {
-  padding: 20px 0 30px 0;
-  font-family: 'Oswald', sans-serif;
-  font-optical-sizing: auto;
-  font-weight: 400;
-  font-style: normal;
-  font-size: 30px;
+  position: relative;
+  padding: 20px 0 40px 32px;
+  font-family: font.$font-set;
+  font-size: 26px;
+  font-weight: 700;
+  color: $black;
 }
 
-.text {
-  line-height: 1.5;
+.textArea {
+  padding: 0 32px;
+  font-family: font.$font-set;
+  line-height: 1.8;
+  color: $grey;
+}
+
+.prevBtn {
+  position: absolute;
+  left: 0;
+  top: 20px;
+  margin-right: 12px;
+  cursor: pointer;
+}
+
+.favBtn {
+  position: absolute;
+  right: 24px;
+  bottom: 24px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 30px;
+  height: 30px;
+  color: rgba($white, 0.7);
+  background-color: rgba($grey, 0.2);
+  border-radius: 100%;
+  cursor: pointer;
+
+  &.active {
+    color: $pink;
+    background-color: rgba($pink, 0.2);
+  }
 }
