--- a/components/CategoryItem.module.scss
+++ b/components/CategoryItem.module.scss
@@ -32,7 +32,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: end;
+  justify-content: flex-end;
   min-height: 180px;
   max-height: 180px;
   overflow: hidden;
